--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </header>
     
         <nav>
-            <a href="#">HOME</a>
-            <a href="#">MENU</a>
-            <a href="#">ORDER ONLINE</a>
-            <a href="#">GIFT VOUCHER</a>
-            <a href="#">CATERING</a>
-            <a href="#">CONTACT</a>
+            <a href="index.html">HOME</a>
+            <a href="menu.html">MENU</a>
+            <a href="order.html">ORDER ONLINE</a>
+            <a href="gifts.html">GIFT VOUCHER</a>
+            <a href="catering.html">CATERING</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
     
         <main>
